--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,17 @@ body{
 }
 .right-menu{
     border-left: 1px solid var(--color2);
-    height:100%;
+    height:100vh;
+    position: sticky;
+    top:0px;
 }
 .left-menu{
  font-size: 19px;
  font-weight: 700;
  border-right: 1px solid var(--color2);
  height:100vh;
+ position: sticky;
+top:0px;
 }
 .tweet-btn{
     background-color: var(--color3);
@@ -100,6 +104,7 @@ body{
 width:100%;
 position: sticky;
 top:0px;
+z-index:1;
 }
 .content-filter{
     width:inherit;
@@ -132,7 +137,28 @@ top:0px;
 }
 .new-tweet-area{
     position:relative;
-    top: 150px;
+    border-bottom: 1px solid var(--color2);
+    display:flex;
+    justify-content: space-evenly;
+    padding: 15px 5px;
+}
+.tweet-text-button-area{
+display:flex;
+flex-direction: column;
+width:550px;
+}
+.tweet-input-area{
+    background-color:var(--color1);
+    border:none;
+    height:50px;
+    border-bottom: 1px solid var(--color2);
+    width:100%;
+    margin:5px 0px;
+}
+.smol{
+position: relative;
+align-self: flex-end;
+min-width:100px;
 }
 .legal{
     font-size: small;
@@ -151,7 +177,6 @@ top:0px;
     padding: 3px 10px;
     max-width: 230px;
     letter-spacing:0.07rem;
-    margin-left:20px;
     margin-top:15px;
 }
 .account-info{
@@ -179,4 +204,7 @@ top:0px;
 #account-handle{
     color:var(--color5);
     font-size:11px;
+}
+.big{
+    min-width: 170px;
 }
