--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
     --color1: rgb(0, 0, 0);
     --color2: rgb(43, 43, 43);
     --color3:rgb(8, 144, 207);
+    --color3b:rgb(4,100,150);
     --color4: white;
     --color5: rgb(73, 73, 73);
+    --color6: rgb(20,20,20);
 }
 body{
     margin: 0;
@@ -16,13 +18,12 @@ body{
 }
 .main-container{
     display: grid;
-    grid-template-columns: 275px auto 350px;
+    grid-template-columns: 275px auto 375px;
     margin: 0 auto;
     padding:0px 3rem;
 }
 .right-menu{
     border-left: 1px solid var(--color2);
-    height:100vh;
     position: sticky;
     top:0px;
 }
@@ -30,9 +31,8 @@ body{
  font-size: 19px;
  font-weight: 700;
  border-right: 1px solid var(--color2);
- height:100vh;
  position: sticky;
-top:0px;
+ top:0px;
 }
 .tweet-btn{
     background-color: var(--color3);
@@ -40,14 +40,16 @@ top:0px;
     color: var(--color4);
 
 }
+.tweet-btn:hover{
+    background-color: var(--color3b);
+}
 .big{
     font-size:large;
     font-weight: 400;
     height:55px;
-    max-width: 230px;
+    width: 250px;
     padding: 15px;
     margin: 0 auto;
-    margin-left: 30px;
 }
 .smol{
     font-size: large;
@@ -62,14 +64,14 @@ top:0px;
     justify-content: center;
     line-height: 3.3rem;
 }
-.menu-list .list-item{
+.menu-list .list-option{
     display:flex;
     align-items: center;
     padding-left:15px;
     padding-right: 15px;
     width: fit-content;
 }
-.menu-list .list-item:hover{
+.menu-list .list-option:hover{
     background-color: var(--color2);
     border-radius: 25px;
 }
@@ -84,25 +86,24 @@ top:0px;
     height: 40px;
     margin-left: 10px;
 }
-.trends-container,
-.might-know-container
-{
-    background-color:var(--color2);
-    height:200px;
-    margin: 10px auto;
-    border-radius: 25px;
-    padding:0px 10px;
-    max-width: 300px;
+.search-bar-container{
+    background-color: var(--color1);
+    position:sticky;
+    top:0px;
+    padding:1px 0px;
 }
 .search-area{
+    display:flex;
+    margin:10px auto;
+    width: 330px;
     background-color: var(--color2);
     border-radius: 25px;
     height:40px;
     border: none;
 }
 .main-content{
-width:100%;
-position: sticky;
+
+    position: sticky;
 top:0px;
 z-index:1;
 }
@@ -156,16 +157,18 @@ width:550px;
     margin:5px 0px;
 }
 .smol{
-position: relative;
-align-self: flex-end;
+    position: relative;
+    align-self: flex-end;
 min-width:100px;
 }
 .legal{
     font-size: small;
+    max-width:320px;
+    margin:5%;
 }
 .legal a, .copy{
     text-decoration: none;
-    color:var(--color5)
+    color:var(--color5);
 }
 .account-selector{
     border-radius:30px;
@@ -198,8 +201,8 @@ min-width:100px;
     transition: 0.1s ease-in-out;
 }
 #account-name{
- font-weight:bold;
- font-size:14px;
+    font-weight:bold;
+    font-size:14px;
 }
 #account-handle{
     color:var(--color5);
@@ -207,4 +210,39 @@ min-width:100px;
 }
 .big{
     min-width: 170px;
+}
+.trends-container,
+.might-know-container
+{
+    background-color:var(--color6);
+    height:auto;
+    margin: 10px 25px;
+    border-radius: 25px;
+    max-width: 370px;
+}
+.trends-container{
+    height:auto;
+}
+.trend{
+    height:50px;
+    padding: 15px 15px;
+}
+.trend:hover,.show-more:hover{
+    background-color:var(--color2)
+}
+.show-more:hover{
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.misc-info{
+    color: var(--color5);
+}
+.show-more{
+    padding:15px 15px;
+}
+.right-menu-section-title{
+    padding: 15px 15px;
+}
+.related-users:hover{
+background-color: var(--color2);
 }
