--- a/styles.css
+++ b/styles.css
@@ -288,8 +288,9 @@ background-color: var(--color2);
     grid-template-columns: repeat(5, 1fr);/* establece 5 columnas de 1fr cada una*/
 }
 .span-2{
-    grid-row: 1 / 3;
-    background-color: red;
-    height:4rem;
-    width:auto
+    grid-row: 1 / span 2;
+    height:70px;
+}
+.tweet-content{
+    grid-column: 2 / span 2;
 }
